# dbot-rs

./: (DOT)env  Cargo.toml
src/: main.rs
src/cmds/: admin.rs  misc.rs  mod.rs
