[package]
name = "discord_dot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.21"
dotenv = "0.15.0"
rand = "0.8.5"
serde_json = "1.0.85"
serenity = { default-features = false, features = ["cache", "standard_framework", "client", "gateway", "model", "rustls_backend", "framework", "http", "utils", "collector"], version = "0.11.4"}
tokio = { version = "1.20.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
